--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.hide {
+  display: none;
+}
+.container {
+  /* margin: 20px; */
+  background-color: rgb(24, 24, 26);
+  width: 40%;
+  /* align-items: center; */
+  color: azure;
+margin-left: 50px;
+padding-left: 50% ;
+
+transition: 2s;
+}
+
+.input {
+  background-color: white;
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  margin: 10px;
+  display: flexbox;
+  justify-content: center;
+  flex-direction: row;
+  border-radius:  10px;
+  /* margin-left: 20%; */
+}
+label 
+{
+  font-size: 30px;
+  color: rgb(121, 115, 115);
+  font-weight: 500;
+  font-family: Georgia, 'Times New Roman', Times, serif ;
+  margin-left: 30%;
+}
+.boton {
+  margin-left: 50%;
+  border-radius: 50px;
+  background-color:  rgb(0, 0, 0) ;
+}
