--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #212529;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
