--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.hide {
+  display: none;
+}
+.container {
+  /* margin: 20px; */
+  background-color: rgb(24, 24, 26);
+  width: 60%;
+  height: 60%;
+  /* align-items: center; */
+  color: azure;
+/* margin-left: 50px; */
+padding: 3% ;
+border: 5px solid rgb(51, 0, 0);
+border-radius: 40px ;
+transition: 2s;
+}
+
+.input {
+  background-color: white;
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  margin: 12px;
+  display: flexbox;
+  justify-content: center;
+  flex-direction: row;
+  border-radius:  10px;
+  /* margin-left: 20%; */
+}
+label 
+{
+  font-size: 30px;
+  color: rgb(136, 33, 33);
+  font-weight: 500;
+  font-family: Georgia, 'Times New Roman', Times, serif ;
+  /* margin-left: 30%; */
+}
+.boton {
+  /* margin-left: 50%; */
+  border-radius: 50px;
+  background-color:  rgb(0, 0, 0) ;
+  
+}
