--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,6 +1,6 @@
 .login-main{
     width: 970px;
-    height: 500px;
+    height: 450px;
     border-radius: 10px;
     /* border: 1px solid gray; */
     flex:1;
@@ -31,7 +31,7 @@ body{
     flex-direction: row;
     text-align: center;
     padding-left: 18%;
-    padding-top: 4%;
+    /* padding-top: 20%; */
     background-color: #EFEFEF  ;
 
 }
@@ -41,6 +41,12 @@ body{
     background-color: #E2296A;
     box-shadow: 2px 2px 10px 3px #D0D3D4;
     border:0px;
+    color: white;
+    transform: translateX(-5px);
+}
+.login-btn:hover{
+    background-color:rgb(160, 10, 63);
+    color:rgb(207, 200, 200);
 }
 .form-group{
     flex-direction: row;
@@ -83,10 +89,16 @@ body{
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
+.login-form-container{
+    margin: 0px;
+    transform: translate(8px,-67px);
+}
 .btn-signup{
     color: rgb(58, 60, 61);
     /* margin-right:40% ; */
-    transform: translate(-160px,-40px);
+    transform: translate(170px,-40px);
+    width: 240px;
+    height: 30px;
 }
 .remember-label{
     transform: translateX(-300px);
