--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -30,17 +30,23 @@ body{
     flex:1;
     flex-direction: row;
     text-align: center;
-    padding-left: 18%;
+    padding-left: 15%;
     padding-top: 4%;
     background-color: #EFEFEF  ;
 
 }
-.login-btn{
+.signup-btn{
     height: 60px;
     width: 160px;
     background-color: #E2296A;
     box-shadow: 2px 2px 10px 3px #D0D3D4;
     border:0px;
+    color:white;
+    transform: translateX(-5px);
+}
+.signup-btn:hover{
+    background-color:rgb(160, 10, 63);
+    color:rgb(207, 200, 200);
 }
 .form-group{
     flex-direction: row;
@@ -83,10 +89,12 @@ body{
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.btn-signup{
+.btn-login{
     color: rgb(58, 60, 61);
     /* margin-right:40% ; */
-    transform: translate(-160px,-40px);
+    transform: translate(190px,-40px);
+    width: 240px;
+    height: 30px;
 }
 .remember-label{
     transform: translateX(-300px);
@@ -98,5 +106,9 @@ body{
 }
 .form-container{
     margin: 0px;
-    transform: translateY(-80px);
+    transform: translate(8px,-67px);
+}
+
+.password-field{
+    margin-bottom: 30px;
 }
