--- a/src/index.css
+++ b/src/index.css
@@ -24,16 +24,17 @@ code {
 }
 .container {
   /* margin: 20px; */
-  background-color: rgb(24, 24, 26);
+  background-color: rgb(255, 255, 255);
   width: 60%;
   height: 60%;
   /* align-items: center; */
-  color: azure;
+  color: rgb(0, 0, 0);
 /* margin-left: 50px; */
 padding: 3% ;
 border: 5px solid rgb(51, 0, 0);
 border-radius: 40px ;
 transition: 2s;
+ font-size: medium;
 }
 
 .input {
