--- a/src/sidenav.css
+++ b/src/sidenav.css
@@ -8,7 +8,21 @@
     bottom: 0;
     left: 0;
     z-index: 1006;
+    
     min-width: 60px;
-    background: #000000;
+    background: #c5bcbc;
     transition: min-width 0.72s;
+}
+.navitems{
+    /* background-image: linear-gradient() */
+    color: black;
+    background: rgb(204, 197, 197);
+    font-weight: 100;
+    text-shadow: rgb(172, 167, 167);
+}
+
+.Navitems:hover {
+    color: rgb(0, 0, 0);
+    background-color: rgb(202, 32, 146);
+    font-size: medium;
 }
