--- a/src/Pages/Headerbar.css
+++ b/src/Pages/Headerbar.css
@@ -6,7 +6,7 @@
     margin-left: 49px;
 background: rgb(236, 231, 231);
 height: 60px;
-    width: 950px;
+    width: 96%;
     /* border-radius: 20px; */
     /* align-self: center; */
     margin-top: -50px;
